--- a/robotics.html
+++ b/robotics.html
@@ -175,6 +175,8 @@ footer { text-align:center; padding:20px; background:#0f2027; color:#a3c9c9; fon
         <h3>Tic-Tac-Toe with Pepper</h3>
         <p>Implemented an interactive Tic-Tac-Toe game on the Pepper humanoid robot using Python and NAOqi SDK. Developed an adaptive strategy system that adjusts difficulty based on user performance. Integrated speech recognition, natural dialogue, and facial emotion detection to make the robot more engaging and responsive, providing a human-like game experience through social robotics principles.</p>
         <a href="https://github.com/tulsikumar-1/Tic-Tac-Toe-with-Pepper" target="_blank">View on GitHub</a>
+        <a href="hri_tic_tac.html" target="_blank">Video Demo</a>
+
       </div>
     </div>
     <!-- Project 4 -->
