--- a/hri_tic_tac.html
+++ b/hri_tic_tac.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Example</title>
+  <title>Tulsi Kumar</title>
 
   <style>
     body {
